--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>ホームページです</h1>
         <p>秋ですが、少し暑いですね。去年までは、寒かったのですが...</p>
+        <P>高山に美味しい飲み物がありました。過去一でした!!</P>
     </body>
 </html>
