自己紹介を追加しました

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>僕のホームページです</title>
+    </head>
+    <body>
+        <h1>ホームページです</h1>
+        <p>秋ですが、少し暑いですね。去年までは、寒かったのですが...</p>
+        <P>高山に美味しい飲み物がありました。過去一でした!!</P>
+        <h1>僕のプロフィール</h1>
+        <p>名前 正村優人</p>
+        <h2>勉強中</h2>
+        <ul>
+            <li>css</li>
+            <li>html</li>
+        </ul>
+    </body>
+</html>
