欲しいものや、その他諸々追加しました。

--- a/index.html
+++ b/index.html
@@ -14,5 +14,22 @@
             <li>css</li>
             <li>html</li>
         </ul>
+        <h2>欲しいもの</h2>
+        <ul>
+            <li>お金</li>
+            <li>ゲーミングpc</li>
+            <li>知能</li>
+            <li>コミニケーション能力</li>
+        </ul>
+        <h2>資格</h2>
+        <ul>
+            <li>MOS</li>
+        </ul>
+        <h2>趣味</h2>
+        <ul>
+            <li>ぬいぐるみ</li>
+            <li>車のタイヤ</li>
+            <li>ゲーム</li>
+        </ul>
     </body>
 </html>
