おみくじを追加しました！

--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
             <li>車のタイヤ</li>
             <li>ゲーム</li>
         </ul>
+        <h2>ポートフォリオ</h2>
+        <ul>
+            <li><a href="./omikuji/index.html">僕のおみくじ</a></li>
+            
+        </ul>
     </body>
 </html>
