おみくじを追加しました！

--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
         </ul>
         <h2>ポートフォリオ</h2>
         <ul>
-            <li><a href="./omikuji/index.html">僕のおみくじ</a></li>
-            
+            <li><a href="./myomikuji/index.html">僕のおみくじ</a></li>
         </ul>
+        <h3>計算機の場所</h3>
+        <ul>
+            <li><a href="./keisanki/index.html">計算機の場所</a></li>
+        </ul>
+
     </body>
 </html>
