--- a/omikuji/index.html
+++ b/omikuji/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <p><a href="../">トップページに戻ると縁起が悪くなりますよ、、、</a></p>
+        <p><a href="../keisanki/index.html">計算機の場所</a></p>
         <h1>おみくじを作ります！</h1>
     </body>
 </html>
