--- a/keisanki/index.html
+++ b/keisanki/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p><a href="../">トップページ</a></p>
-        <p><a href="../omikuji/index.html">おみくじの場所</a></p>
+        <p><a href="../myomikuji/index.html">おみくじの場所</a></p>
             <h1>ここが計算機だ</h1>
     </body>
 </html>
